# php2ir

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile.config.example  NOTICE  README.md
benches/: codegen_bench.rs  parser_bench.rs
examples/: ffi_math.php  hello.php  oop.php
src/: ast.rs  compiler.rs  error.rs  ir.rs  lib.rs  main.rs  parser.rs  runtime.rs  types.rs  utils.rs
tests/ir/: basic_arithmetic.php  control_flow.php
